--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start-mongo": "mongod",
-    "start": "concurrently \"mongod\" \"react-scripts start\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
