--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "react-scripts": "^5.0.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
+  },
+  "devDependencies": {
+    "concurrently": "^8.0.1"
   }
 }
